--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+      <a href="https://cvbuilder.me/resume/fa/e161c16b-b0ab-47af-8ade-d3bd5729026c" class="read-more">resume</a>
     </article>
   {% endfor %}
 </div>
